# cite2fn-web

./: .dockerignore  .gitignore  DEPLOY.md  README.md  fly.toml
api/: Dockerfile  README.md  config.py  formatter.py  jobs.py  main.py  pipeline.py  pyproject.toml
api/drivers/: _prompts.py  claude.py  groq.py
api/routes/: _testmode.py  admin.py  download.py  feedback.py  jobs.py  upload.py
api/tests/: test_feedback_and_events.py  test_prompts.py  test_routes.py
core/: README.md  pyproject.toml
core/cite2fn/: __init__.py  __main__.py  apa.py  assemble.py  cleanup.py  cli.py  comments.py  detect.py  docx_io.py  fetch.py  footnotes.py  models.py  references.py  references_list.py  supra.py
core/tests/: test_body_fixes.py  test_smoke.py
scripts/: harness.py
web/: Dockerfile  README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/admin/: page.tsx
web/app/how-it-works/: page.tsx
web/app/privacy/: page.tsx
web/app/terms/: page.tsx
web/components/: BugReportModal.tsx  ContentLayout.tsx  DonePanel.tsx  ErrorPanel.tsx  Footer.tsx  Header.tsx  ProgressPanel.tsx  ReviewTable.tsx  ThemeToggle.tsx  UploadZone.tsx
web/lib/: api.ts  types.ts  useEta.ts  useHashJobId.ts  useJob.ts
