[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cite2fn-api"
version = "0.1.0"
description = "FastAPI service for cite2fn — accepts .docx uploads and returns cited documents."
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.9",
    "anthropic>=0.40",
    "openai>=1.54",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "pytest-asyncio>=0.24"]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*"]
